Name:               Hbudget
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A library for implementing a budget
Category:           Development
Description:        A library for implementing a budget
Homepage:           https://github.com/tonymorris/hbudget
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/hbudget.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                      base < 5 && >= 3
                    , mtl >= 2
                    , comonad-transformers >= 2
                    , data-lens >= 4
                    , time >= 1.2
                    , semigroups >= 0.8

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Math.Budget.FixedPeriod
                    Math.Budget.Money
                    Math.Budget.Interval
                    Math.Budget.Priors

