Name:               Hbudget
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A library for implementing a budget
Category:           Development
Description:        A library for implementing a budget
Homepage:           https://github.com/tonymorris/hbudget
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/hbudget.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                      base < 5 && >= 3
                    , mtl >= 2
                    , comonad-transformers >= 2
                    , data-lens >= 4
                    , time >= 1.2
                    , semigroups >= 0.8
                    , network >= 2.3

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Math.Budget.Lens.ArbitraryIntervalL
                    Math.Budget.Lens.ArbitraryMethodL
                    Math.Budget.Lens.ArbitraryPriorsL
                    Math.Budget.Lens.BankDepositL
                    Math.Budget.Lens.BPayL
                    Math.Budget.Lens.EveryMonthsL
                    Math.Budget.Lens.EverySecondsL
                    Math.Budget.Lens.FixedIntervalL
                    Math.Budget.Lens.FixedPriorsL
                    Math.Budget.Lens.InternetMethodL
                    Math.Budget.Lens.KnownIntervalL
                    Math.Budget.Lens.MeanPriorsL
                    Math.Budget.Lens.MedianPriorsL
                    Math.Budget.FixedPeriod
                    Math.Budget.Interval
                    Math.Budget.Lens
                    Math.Budget.Method
                    Math.Budget.Money
                    Math.Budget.PaymentInterval
                    Math.Budget.PaymentType
                    Math.Budget.Priors
                    Math.Budget.Types
                    Math.Budget


